# nlp100knock_prac2025

./: .gitignore  Readme.md  main.py  pyproject.toml
ch01/: 0.py  1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  typoglycemia.md
ch02/: 10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py
ch03/: 20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  debug_wiki_api.py
ch04/: 30.py  31.py  32.py  33.py  34.py  35.py  36.py  37.py  38.py  39.py  test.py
ch05/: 40.py  41.py  42.py  43.py  44.py  45.py  46.py  47.py  48.py  49.py  Readme.md
ch06/: 50.py  51.py  52.py  53.py  54.py  55.py  56.py  57.py  58.py  59.py  59_test.py  Readme.md
ch07/: 60.py  61.py  62.py  63.py  64.py  65.py  66.py  67.py  68.py  69.py
ch08/: 70.py  71.py  72.py  73.py  74.py  75.py  76.py  77.py  78.py  79.py  readme.md
ch09/: 80.py  81.py  82.py  83.py  84.py  85.py  86.py  87.py  88.py  89.py  readme.md  save_tokenizer_87.py
ch10/: 90.py  91.py  92.py  93.py  94.py  95.py  96.py  97.py  98.py  99.py  eva.py
