[project]
name = "nlp100knock-prac2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "gensim>=4.4.0",
    "ginza>=5.2.0",
    "google-genai>=1.52.0",
    "ja-ginza>=5.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
